Change distance in rev cell

--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -660,12 +660,12 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="3" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHs-o9-u4q">
-                                                    <rect key="frame" x="20" y="37.333333333333343" width="350" height="38.666666666666657"/>
+                                                    <rect key="frame" x="16" y="37.333333333333343" width="354" height="38.666666666666657"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="38" id="fUF-Pb-Rxz"/>
                                                     </constraints>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -687,7 +687,7 @@
                                                 <constraint firstItem="v7Y-Eg-xbe" firstAttribute="top" secondItem="JOu-e8-kmQ" secondAttribute="bottom" constant="8" id="cA8-Ne-SrA"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="yHs-o9-u4q" secondAttribute="trailing" id="cOU-cy-vtp"/>
                                                 <constraint firstItem="ZwC-Qd-Weo" firstAttribute="top" secondItem="JOu-e8-kmQ" secondAttribute="bottom" constant="8" id="cVc-4Y-BIE"/>
-                                                <constraint firstItem="yHs-o9-u4q" firstAttribute="leading" secondItem="P6e-sn-3JU" secondAttribute="leadingMargin" id="hQR-I4-ez3"/>
+                                                <constraint firstItem="yHs-o9-u4q" firstAttribute="leading" secondItem="P6e-sn-3JU" secondAttribute="leadingMargin" constant="-4" id="hQR-I4-ez3"/>
                                                 <constraint firstAttribute="bottom" secondItem="B6h-0y-9w8" secondAttribute="bottom" id="lYn-5U-ZI9"/>
                                                 <constraint firstItem="v7Y-Eg-xbe" firstAttribute="leading" secondItem="P6e-sn-3JU" secondAttribute="leadingMargin" id="wMQ-ra-dSr"/>
                                                 <constraint firstItem="JOu-e8-kmQ" firstAttribute="top" secondItem="P6e-sn-3JU" secondAttribute="top" id="yEb-UG-LeM"/>
