--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -1733,6 +1733,16 @@
                                                     <rect key="frame" x="8.0000000000000018" y="15.666666666666664" width="19.666666666666671" height="18.333333333333336"/>
                                                     <color key="tintColor" red="0.79999023680000003" green="0.79999488590000001" blue="0.80000716449999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Crf-Da-Yte">
+                                                    <rect key="frame" x="309.66666666666669" y="9.6666666666666679" width="50" height="30.000000000000004"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="SXm-rW-3XC"/>
+                                                        <constraint firstAttribute="height" constant="30" id="TjX-3X-wgb"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <action selector="photoSearchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wqW-6B-1MG"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
@@ -1743,6 +1753,8 @@
                                                 <constraint firstItem="XZE-DD-NK1" firstAttribute="leading" secondItem="8Pw-vJ-MkW" secondAttribute="trailing" constant="8" id="ZvC-Ov-yYu"/>
                                                 <constraint firstItem="8Pw-vJ-MkW" firstAttribute="leading" secondItem="dx9-h0-UIx" secondAttribute="leading" constant="8" id="eUe-ml-Wy1"/>
                                                 <constraint firstAttribute="trailing" secondItem="fmZ-Ye-vNP" secondAttribute="trailing" constant="8" id="hPD-kA-tUJ"/>
+                                                <constraint firstItem="Crf-Da-Yte" firstAttribute="centerX" secondItem="fmZ-Ye-vNP" secondAttribute="centerX" id="nC5-KW-0AO"/>
+                                                <constraint firstItem="Crf-Da-Yte" firstAttribute="centerY" secondItem="fmZ-Ye-vNP" secondAttribute="centerY" id="sM7-kb-yvx"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -2123,7 +2135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1306" y="1636"/>
+            <point key="canvasLocation" x="-1306.1538461538462" y="1635.7819905213269"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="5S3-zP-UQM">
@@ -2719,11 +2731,11 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="lNg-NF-ZhP"/>
-        <segue reference="chw-zm-uhr"/>
+        <segue reference="0O8-eQ-Bac"/>
+        <segue reference="yR4-7g-u1L"/>
         <segue reference="UT5-6g-K7A"/>
-        <segue reference="3vK-wY-P32"/>
-        <segue reference="3eo-7Z-uW5"/>
+        <segue reference="LYd-3X-sUB"/>
+        <segue reference="ZSI-nF-15U"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="chevron.forward" catalog="system" width="96" height="128"/>
